changelogs are docs
We don't mark changelogs as documentation, so CI unnecessarily
does full checks when we add changelogs. Correct this.

NOTE: we only accept changelog files from top-level subdirectories.
There are changelog files in various tests that must be considered
to be "code".

(cherry picked from commit 871c0d46a3d5d18f8726dcc0aa66e0466890166a)

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -14,6 +14,11 @@ on:
       - 'doc/**'
       - '**/README.md'
       - 'CONTRIBUTING.md'
+      - "changelog.d/**"
+      # only top level for these, because various test packages have them too
+      - "*/ChangeLog.md"
+      - "*/changelog.md"
+      - "release-notes/**"
     branches:
       - master
   pull_request:
@@ -21,6 +26,10 @@ on:
       - 'doc/**'
       - '**/README.md'
       - 'CONTRIBUTING.md'
+      - "changelog.d/**"
+      - "*/ChangeLog.md"
+      - "*/changelog.md"
+      - "release-notes/**"
   release:
     types:
       - created
