--- a/.github/workflows/validate.skip.yml
+++ b/.github/workflows/validate.skip.yml
@@ -19,6 +19,11 @@ on:
       - 'doc/**'
       - '**/README.md'
       - 'CONTRIBUTING.md'
+      - "changelog.d/**"
+      # only top level for these, because various test packages have them too
+      - "*/ChangeLog.md"
+      - "*/changelog.md"
+      - "release-notes/**"
     branches:
       - master
   pull_request:
@@ -26,6 +31,10 @@ on:
       - 'doc/**'
       - '**/README.md'
       - 'CONTRIBUTING.md'
+      - "changelog.d/**"
+      - "*/ChangeLog.md"
+      - "*/changelog.md"
+      - "release-notes/**"
   release:
     types:
       - created
