switch validate to 22.04 for now
`validate-old-ghcs` doesn't work on 24.04, which GHA just updated
to; and it uses build artifacts from the earlier steps, so for now
the whole thing needs to be downgraded to get thinsg working. We
must address this properly later.

(cherry picked from commit 85f0f0c6ce55235ce4eeaf70a9c0c2a9d61d2ade)

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -62,7 +62,7 @@ jobs:
       matrix:
         sys:
           - { os: windows-latest, shell: "C:/msys64/usr/bin/bash.exe -e {0}" }
-          - { os: ubuntu-latest, shell: bash }
+          - { os: ubuntu-22.04, shell: bash }
           - { os: macos-13, shell: bash }
         # If you remove something from here, then add it to the old-ghcs job.
         # Also a removed GHC from here means that we are actually dropping
@@ -233,7 +233,7 @@ jobs:
 
   validate-old-ghcs:
     name: Validate old ghcs ${{ matrix.extra-ghc }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: validate
 
     strategy:
@@ -362,7 +362,7 @@ jobs:
     needs: validate
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]
+        os: [ubuntu-22.04, macos-13, windows-latest]
         # We only use one ghc version the used one for the next release (defined at top of the workflow)
         # We need to build an array dynamically to inject the appropiate env var in a previous job,
         # see https://docs.github.com/en/actions/learn-github-actions/expressions#fromjson
