try to run check-sdist on the right ghcs
(cherry picked from commit 6a2b5a75b603e839a645c030c55fa1fa88104328)

--- a/.github/workflows/check-sdist.yml
+++ b/.github/workflows/check-sdist.yml
@@ -28,23 +28,17 @@ jobs:
   # No caching, since the point is to verify they can be installed "from scratch"
   # Don't run on master or a PR targeting master, because there's never an installable Cabal
   dogfood-sdists:
-    name: Dogfood sdist on ${{ matrix.os }} ghc-${{ matrix.ghc }}
+    name: Dogfood sdist on ghc-${{ matrix.ghc }}
     if: github.ref != 'refs/heads/master' && github.base_ref != 'master'
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest]
         # this should be kept up to date with the list in validate.yml, but should be the
         # *first* compiler release so we validate against what is hopefully the first
         # release of a corresponding Cabal and friends. it can also be short since it's
         # highly unlikely that we are releasing really old branches.
         ghc:
-          [
-            "9.10.1",
-            "9.8.1",
-            "9.6.1",
-            "9.4.1",
-          ]
+          ["9.10.1", "9.8.1", "9.6.1"]
 
     steps:
 
